--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,122 @@
+
+
+@article{jensen88-9495,
+  title = {Rotational invariance and dipolar magnetoelastic effects: Application to TmSb},
+  author = {Jensen, Jens},
+  journal = {Phys. Rev. B},
+  volume = {37},
+  issue = {16},
+  pages = {9495--9503},
+  numpages = {0},
+  year = {1988},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.37.9495},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.37.9495}
+}
+
+
+@article{jensen79-4573,
+doi = {10.1088/0022-3719/12/21/022},
+url = {https://dx.doi.org/10.1088/0022-3719/12/21/022},
+year = {1979},
+month = {nov},
+publisher = {},
+volume = {12},
+number = {21},
+pages = {4573},
+author = {J Jensen and  S B Palmer},
+title = {Field dependence of the elastic constant c66 in the basal-plane ferromagnet terbium},
+journal = {Journal of Physics C: Solid State Physics},
+abstract = {The dependence of c66 in ferromagnetic Tb on a magnetic field applied along a hard axis in the basal plane has been studied experimentally. It has been predicted that c66 should vanish at the second-order transition from a phase where the magnetisation is parallel to the field to a phase which has a finite moment perpendicular to the field. Although it has not been possible to detect the ultrasonic waves in the close neighbourhood of the transition, c66 is found to be substantially reduced at fields slightly higher than the critical value. The observed behavior of c66 can be described quite accurately, at all temperatures below the Curie point, by a random-phase theory without the use of any free parameters.}
+}
+
+@article{houmann79-1105,
+  title = {Magnetic excitations in praseodymium},
+  author = {Houmann, J. G. and Rainford, B. D. and Jensen, J. and Mackintosh, A. R.},
+  journal = {Phys. Rev. B},
+  volume = {20},
+  issue = {3},
+  pages = {1105--1118},
+  numpages = {0},
+  year = {1979},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.20.1105},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.20.1105}
+}
+
+
+@article{palmer78-2465,
+  title={Magnetic effects on the elastic constants of praseodymium},
+  author={Stuart B. Palmer and Jens H. Jensen},
+  journal={Journal of Physics C: Solid State Physics},
+  year={1978},
+  volume={11},
+  pages={2465-2473}
+}
+
+@article{jensen76-111,
+doi = {10.1088/0022-3719/9/1/019},
+url = {https://dx.doi.org/10.1088/0022-3719/9/1/019},
+year = {1976},
+month = {jan},
+publisher = {},
+volume = {9},
+number = {1},
+pages = {111},
+author = {J Jensen},
+title = {Coupling between the magnetic excitations and the phonons in praseodymium},
+journal = {Journal of Physics C: Solid State Physics},
+abstract = {The dispersion relation of the magnetic excitations of the hexagonal ions in DHCP Pr and the selection rules for the linear coupling to the phonons are determined by general symmetry considerations. The magnetic excitations propagating in the symmetry directions are considered in the cases of an external magnetic field applied along an a and a b direction. The magnetic excitations are approximated by pseudo-boson excitations of the spin sub-space, J=4, MJ=0 and +or-1, and the presence of the ions on the cubic sites is neglected. The selection rules deduced agree with experimental observations. The experimental result for the strength of the exciton-phonon interaction is used in an estimate of the effects of an applied field on the elastic constants of Pr at zero temperature.}
+}
+
+
+@article{jensen75-320,
+  title = {Spin waves in terbium. II. Magnon-phonon interaction},
+  author = {Jensen, J. and Houmann, J. G.},
+  journal = {Phys. Rev. B},
+  volume = {12},
+  issue = {1},
+  pages = {320--331},
+  numpages = {0},
+  year = {1975},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.12.320},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.12.320}
+}
+
+
+@article{jensen71-271,
+title = {MAGNETO-ELASTIC INTERACTIONS IN TERBIUM.},
+author = {Jensen, J},
+abstractNote = {},
+doi = {},
+url = {https://www.osti.gov/biblio/4681182}, journal = {Int. J. Magn. 1: No. 3, 271-5(May 1971).},
+number = 3,
+volume = 1,
+place = {United Kingdom},
+year = {1971},
+month = {1}
+}
+
+
+@article{jensen07-144428,
+  title = {Static and dynamic Jahn-Teller effects and antiferromagnetic order in $\mathrm{Pr}{\mathrm{O}}_{2}$: A mean-field analysis},
+  author = {Jensen, Jens},
+  journal = {Phys. Rev. B},
+  volume = {76},
+  issue = {14},
+  pages = {144428},
+  numpages = {10},
+  year = {2007},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.76.144428},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.76.144428}
+}
+
 @article{doerr05-906,
 title={Magnetoelastic Investigations at Pr$_{1-x}$Ca$_x$MnO$_3$ (x=0.35,0.5)},
 author={M. Doerr and  G. Remenyi and M. Rotter and S. Sahling and N. Saint-Paul and M. Loewenhaupt},
@@ -425,7 +544,7 @@ volume=151}
 
 
 @article{rotter11-012008,
-  author={M Rotter and B Fåk and J A Blanco},
+  author={M Rotter and B Fï¿½k and J A Blanco},
   title={Magnetic excitations in the longitudinally amplitude modulated magnetic structure of PrNi 2 Si 2},
   journal={Journal of Physics: Conference Series},
   volume={325},
@@ -433,7 +552,7 @@ volume=151}
   pages={012008},
   url={http://stacks.iop.org/1742-6596/325/i=1/a=012008},
   year={2011},
-  abstract={Interest in PrNi 2 Si 2 has been renewed recently because the magnetic structure remains longitudinally amplitude modulated down to low temperatures as inferred from single–crystal neutron diffraction. Based on a dynamical matrix diagonalisation (DMD) formalism considering exchange and crystal field interactions, we have calculated the dispersion of the magnetic excitations of PrNi 2 Si 2 below the Néel temperature. The prediction of a low-energy soft-mode excitations around the scattering vector (0,0, Q z ) within the first Brillouin zone, where Q z ? k z = 0.875 is the value of the propagation vector of the magnetic structure, is in good agreement with the experimental results obtained from inelastic neutron scattering.}
+  abstract={Interest in PrNi 2 Si 2 has been renewed recently because the magnetic structure remains longitudinally amplitude modulated down to low temperatures as inferred from singleï¿½crystal neutron diffraction. Based on a dynamical matrix diagonalisation (DMD) formalism considering exchange and crystal field interactions, we have calculated the dispersion of the magnetic excitations of PrNi 2 Si 2 below the Nï¿½el temperature. The prediction of a low-energy soft-mode excitations around the scattering vector (0,0, Q z ) within the first Brillouin zone, where Q z ? k z = 0.875 is the value of the propagation vector of the magnetic structure, is in good agreement with the experimental results obtained from inelastic neutron scattering.}
 }
 
 
@@ -484,16 +603,16 @@ doi = {10.1063/1.4730611}
 
 
 @article{hu12-123025,
-  author={Z Hu and Hua Wu and T C Koethe and S N Barilo and S V Shiryaev and G L Bychkov and C Schüßler-Langeheine and T Lorenz and A Tanaka and H
+  author={Z Hu and Hua Wu and T C Koethe and S N Barilo and S V Shiryaev and G L Bychkov and C Schï¿½ï¿½ler-Langeheine and T Lorenz and A Tanaka and H
 H Hsieh and H-J Lin and C T Chen and N B Brookes and S Agrestini and Y-Y Chin and M Rotter and L H Tjeng},
-  title={Spin-state order/disorder and metal–insulator transition in GdBaCo 2 O 5.5 : experimental determination of the underlying electronic structure},
+  title={Spin-state order/disorder and metalï¿½insulator transition in GdBaCo 2 O 5.5 : experimental determination of the underlying electronic structure},
   journal={New Journal of Physics},
   volume={14},
   number={12},
   pages={123025},
   url={http://stacks.iop.org/1367-2630/14/i=12/a=123025},
   year={2012},
-  abstract={We have investigated the electronic structure of GdBaCo 2 O 5.5 across the metal–insulator transition (MIT) using soft x-ray absorption and photoelectron spectroscopy. For the low-temperature insulating phase, we find that half of the Co 3+ ions at the octahedral sites are in the low spin (LS) and the other half in the high spin (HS) state, while the Co 3+ ions at the pyramidal sites are in the HS configuration. Upon increasing the temperature across the MIT, part of the LS octahedral Co 3+ undergoes a spin-state transition into the HS configuration. We infer that this destroys the spin-state ordering and thus explains the decrease in resistivity. We observed that the band gap is reduced but not closed in the high-temperature phase.}
+  abstract={We have investigated the electronic structure of GdBaCo 2 O 5.5 across the metalï¿½insulator transition (MIT) using soft x-ray absorption and photoelectron spectroscopy. For the low-temperature insulating phase, we find that half of the Co 3+ ions at the octahedral sites are in the low spin (LS) and the other half in the high spin (HS) state, while the Co 3+ ions at the pyramidal sites are in the HS configuration. Upon increasing the temperature across the MIT, part of the LS octahedral Co 3+ undergoes a spin-state transition into the HS configuration. We infer that this destroys the spin-state ordering and thus explains the decrease in resistivity. We observed that the band gap is reduced but not closed in the high-temperature phase.}
 }
 
 
