--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -558,6 +558,8 @@ input files {\prg mcphas.ini, mcphas.j, etc. } and type
 \item[\prg mcphas\index{mcphas} -h]  to  print help and version of {\prg McPhas}.
 \item[\prg mcphas\index{mcphas} -stamax 14]  end mcphas\index{mcphas} if standard deviation exceeds 14.
 \item[\prg mcphas\index{mcphas} -a] avoid overwriting output files in results, append new results to existing files
+\item[\prg mcphas\index{mcphas} -doeps] refine strain epsilon using elastic and magnetoelastic constants 
+see section \ref{phonons} for how to enter these constants into {\prg mcphas.j}
 \item[\prg mcphas\index{mcphas} -v]  to  enable verbose mode with lots of messages of {\prg McPhas}. Specifically
 the verbose mode enables the following features:
   \begin{itemize}
